@@ -1,5 +1,6 @@
 plugins {
-    id("io.github.reyerizo.gradle.jcstress") version "0.8.15"
+    id("minestom.java-library")
+    alias(libs.plugins.jcstress.plugin)
 }
 
 dependencies {
@@ -9,4 +10,6 @@ dependencies {
 
 jcstress {
     verbose = "true"
+    jcstressDependency = "org.openjdk.jcstress:jcstress-core:${libs.versions.jcstress.asProvider().get()}"
+    jvmArgs = "--enable-native-access=ALL-UNNAMED"
 }
